# text_editor

./: .clang-format  .gitignore  CmakeLists.txt  README.md  format.txt
Headers/: BaseWindow.hpp  Buffer.h  Buffer.hpp  Colors.hpp  EditControl.hpp  EditView.hpp  ErrorMessage.hpp  File.hpp  MainWindow.hpp  Menu.hpp  Os.hpp  StaticControl.h  StaticDialog.hpp  TabControl.hpp  TextWindow.hpp  Trie.hpp  UserDefineDialog.hpp  UserDefineResource.h  colors.h  file.hpp~File  parameters.hpp
Resources/: resource.hpp  text_editor.aps  text_editor.rc
Sources/: AutoComplete.cpp  CMakeLists.txt  EditControl.cpp  EditView.cpp  ErrorMessage.cpp  File.cpp  MainWindow.cpp  Menu.cpp  Os.cpp  StaticDialog.cpp  TabControl.cpp  TabControl2.cpp  TextWindow.cpp  Trie.cpp  UserDefineDialog.cpp  init.cpp  main.cpp
Sources/Snippets/: Tabbed view.cpp  open_dialogue_try.cpp  scintilla.cpp
Sources/scintilla/win32/: ScintRes.res  UpgradeLog.htm
menu practice/: menu practice.cpp
scintilla/win32/: ScintRes.res
